--- a/web/base/templates/base/login_page.html
+++ b/web/base/templates/base/login_page.html
@@ -14,33 +14,33 @@
         </div>
     </nav>
     </header>
-
-        <div class="container py-5 text-center vh-100">
-          <div class="row justify-content-center h-100">
-            <div class="col-10 col-md-8 col-lg-6 col-xl-5 align-self-center">
-              <div class="card shadow-2-strong" style="border-radius: 1rem;">
-                <div class="card-body p-5 text-center">
-
-                  <h3 class="mb-5">Sign in</h3>
-
-                  <div class="form-floating mb-3">
-                    <input type="email" id="floatingInput" class="form-control" placeholder="name@example.com"/>
-                    <label for="floatingInput">Email</label>
-                  </div>
-
-                  <div class="form-floating mb-3">
-                    <input type="password" id="floatingPassword" class="form-control" placeholder="Password" />
-                    <label for="floatingPassword">Password</label>
-                  </div>
-
-                  <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-
-                </div>
+    <div class="container py-5 text-center vh-100">
+      <div class="row justify-content-center h-100">
+        <div class="col-10 col-md-8 col-lg-6 col-xl-5 align-self-center">
+          <div class="card shadow-2-strong bg-body-secondary" style="border-radius: 1rem;">
+            <div class="card-body p-md-5 p-4 text-center">
+  
+              <h3 class="mb-5">Sign in</h3>
+  
+              <div class="form-floating mb-3">
+                <input type="email" id="floatingInput" class="form-control" placeholder="name@example.com"/>
+                <label for="floatingInput">Email</label>
               </div>
+  
+              <div class="form-floating mb-3">
+                <input type="password" id="floatingPassword" class="form-control" placeholder="Password" />
+                <label for="floatingPassword">Password</label>
+              </div>
+  
+              <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+              <br>
+              <p class="card-text mb-0 mt-4">Not registered yet?</p>
+              <a class="btn btn-link btn-lg  p-0 fs-6" href="#">register</a>
             </div>
           </div>
         </div>
-
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
