--- a/web/base/templates/base/login_page.html
+++ b/web/base/templates/base/login_page.html
@@ -40,6 +40,9 @@
           </div>
         </div>
       </div>
+      <div class="row h-100">
+        <h1 style="background-color: red; text-align: center; height: 100%;">Das ein Test!</h1>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
